# BlockchainPoWProject

./: CMakeLists.txt  Readme.md
include/: Block.h  Blockchain.h  BlockchainWithPoW.h
src/: Block.cpp  Blockchain.cpp  BlockchainWithPoW.cpp  main.cpp
